@@ -1,9 +1,11 @@
 package ch.qa.testautomation.framework.rest.hpqc.connection;
 
+import ch.qa.testautomation.framework.common.logging.SystemLogger;
 import ch.qa.testautomation.framework.configuration.PropertyResolver;
-import ch.qa.testautomation.framework.core.json.deserialization.JSONContainerFactory;
 import ch.qa.testautomation.framework.intefaces.RestDriver;
-import com.fasterxml.jackson.databind.JsonNode;
+import ch.qa.testautomation.framework.core.json.deserialization.JSONContainerFactory;
+import net.sf.json.JSONObject;
+
 import jakarta.ws.rs.client.Client;
 import jakarta.ws.rs.client.ClientBuilder;
 import jakarta.ws.rs.client.Entity;
@@ -12,11 +14,8 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.stream.Collectors;
-
-import static ch.qa.testautomation.framework.common.logging.SystemLogger.*;
 
 
 public class QCConnector implements RestDriver {
@@ -52,10 +51,10 @@ public class QCConnector implements RestDriver {
      * @param configFilePath config file path
      */
     public QCConnector(String configFilePath) {
-        JsonNode config = JSONContainerFactory.getConfig(configFilePath);
-        this.host = config.get("host").asText();
-        this.user = config.get("user").asText();
-        this.password = config.get("password").asText();
+        JSONObject config = JSONContainerFactory.getConfig(configFilePath);
+        this.host = config.getString("host");
+        this.user = config.getString("user");
+        this.password = config.getString("password");
         initialize();
     }
 
@@ -156,19 +155,19 @@ public class QCConnector implements RestDriver {
     public Response updateQCEntityWithVersion(String domain, String project, int entityType, String entityId, String upToDate) {
         //lock entity
         response = lockAndUnlockQCEntity(domain, project, entityType, entityId, "lock");
-        log("INFO", "Locked: " + entityType + " with id: " + entityId);
+        SystemLogger.log("INFO", "Locked: " + entityType + " with id: " + entityId);
         //Check out
         response = checkOutQCEntity(domain, project, entityType, entityId);
-        log("INFO", "Checked out: " + entityType + " with id: " + entityId);
+        SystemLogger.log("INFO", "Checked out: " + entityType + " with id: " + entityId);
         //update entity
         response = updateQCEntity(domain, project, entityType, entityId, upToDate);
-        log("INFO", "updated: " + entityType + " with id: " + entityId);
+        SystemLogger.log("INFO", "updated: " + entityType + " with id: " + entityId);
         //check in
         response = checkInQCEntity(domain, project, entityType, entityId, response.readEntity(String.class));
-        log("INFO", "Checked in: " + entityType + " with id: " + entityId);
+        SystemLogger.log("INFO", "Checked in: " + +entityType + " with id: " + entityId);
         //unlock
         response = lockAndUnlockQCEntity(domain, project, entityType, entityId, "unlock");
-        log("INFO", "unlocked: " + entityType + " with id: " + entityId);
+        SystemLogger.log("INFO", "unlocked: " + +entityType + " with id: " + entityId);
 
         return response;
     }
@@ -246,7 +245,7 @@ public class QCConnector implements RestDriver {
 
     @Override
     public Response delete(String path) {
-        log("INFO", "DELETE: path-> " + path);
+        SystemLogger.log("INFO", "DELETE: path-> " + path);
         response = webTarget.path(path)
                 .request(mediaType)
                 .header("Cookie", cookies)
@@ -256,7 +255,7 @@ public class QCConnector implements RestDriver {
 
     @Override
     public Response put(String path, String xml) {
-        log("INFO", "PUT: path-> " + path + "\nXML-> " + xml);
+        SystemLogger.log("INFO", "PUT: path-> " + path + "\nXML-> " + xml);
         response = webTarget.path(path)
                 .request(mediaType)
                 .header("Cookie", cookies)
@@ -295,7 +294,7 @@ public class QCConnector implements RestDriver {
 
     @Override
     public Response get(String path) {
-        log("INFO", "GET: path-> " + path);
+        SystemLogger.log("INFO", "GET: path-> " + path);
         response = webTarget.path(path)
                 .request(mediaType)
                 .header("Cookie", cookies)
@@ -305,13 +304,18 @@ public class QCConnector implements RestDriver {
 
     @Override
     public Response get(String path, String query) {
-        log("INFO", "Get: path-> " + path + "\nQuery-> " + query);
-        response = webTarget.path(path)
-                .queryParam("query", URLEncoder.encode(query, StandardCharsets.UTF_8))
-                .request(mediaType)
-                .header("Cookie", cookies)
-                .get();
+        try {
+            SystemLogger.log("INFO", "Get: path-> " + path + "\nQuery-> " + query);
+            response = webTarget.path(path)
+                    .queryParam("query", URLEncoder.encode(query, "UTF-8"))
+                    .request(mediaType)
+                    .header("Cookie", cookies)
+                    .get();
 
+        } catch (UnsupportedEncodingException ex) {
+            close();
+            SystemLogger.error(ex);
+        }
         return response;
     }
 
@@ -325,7 +329,7 @@ public class QCConnector implements RestDriver {
      */
     @Override
     public Response get(String path, String key, String value) {
-        log("TRACE", "Request Get: " + path + "\nWith Query: " + key + "=" + value);
+        SystemLogger.log("TRACE", "Request Get: " + path + "\nWith Query: " + key + "=" + value);
         response = webTarget.path(path)
                 .queryParam(key, value)
                 .request(mediaType)
@@ -337,17 +341,17 @@ public class QCConnector implements RestDriver {
 
     @Override
     public Response get(String path, Map<String, String> params) {
-        trace("Request Get: " + path);
+        SystemLogger.trace("Request Get: " + path);
         for (Map.Entry<String, String> entry : params.entrySet()) {
             String key = entry.getKey();
             String value = entry.getValue();
             webTarget = webTarget.queryParam(key, value);
-            trace("Query: " + key + "=" + value);
+            SystemLogger.trace("Query: " + key + "=" + value);
         }
         response = webTarget.path(path).request(mediaType)
                 .header("Cookie", cookies)
                 .get();
-        connect();//reset to host
+        connect();
         return response;
     }
 
@@ -358,7 +362,7 @@ public class QCConnector implements RestDriver {
 
     @Override
     public Response post(String path, String xml) {
-        log("INFO", "POST: path-> " + path + "\nXML-> " + xml);
+        SystemLogger.log("INFO", "POST: path-> " + path + "\nXML-> " + xml);
         response = webTarget.path(path)
                 .request(mediaType)
                 .header("Cookie", cookies)
@@ -385,12 +389,12 @@ public class QCConnector implements RestDriver {
      * @param all if print all
      */
     public String printResponse(boolean all) {
-        log("INFO", "\n============getResponse============");
-        log("INFO", String.valueOf(response.getStatus()));
+        SystemLogger.log("INFO", "\n============getResponse============");
+        SystemLogger.log("INFO", String.valueOf(response.getStatus()));
         String entry = "";
         if (all) {
             entry = response.readEntity(String.class);
-            log("INFO", entry);
+            SystemLogger.log("INFO", entry);
         }
         return entry;
     }
@@ -421,16 +425,16 @@ public class QCConnector implements RestDriver {
     }
 
     private Response signIn(String path, String encoded) {
-        trace("Sign-in: " + path);
+        SystemLogger.trace("Sign-in: " + path);
         return webTarget.path(path).request().header("Authorization ", "Basic " + encoded).post(null);
     }
 
     private void printCookies() {
-        response.getCookies().forEach((key, value) -> trace("Cookie: " + key + "->" + value));
+        response.getCookies().forEach((key, value) -> SystemLogger.trace("Cookie: " + key + "->" + value));
     }
 
     private Response signOut(String path, String encoded) {
-        info("Sign-out: " + path);
+        SystemLogger.info("Sign-out: " + path);
         return webTarget.path(path).request().header("Authorization ", "Basic " + encoded).get();
     }
 
